--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:backend": "npm install --prefix backend start",
     "sequelize": "npm run --prefix backend sequelize",
     "sequelize-cli": "npm run --prefix backend sequelize-cli",
-    "start": "npm start --prefix backend",
+    "start": "node app.js --prefix backend",
     "build": "npm run --prefix backend build"
   },
   "repository": {
