--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/",
+  "homepage": ".",
 
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
